syntax = "proto3";
package naruto0913.lottery.lottery;

import "gogoproto/gogo.proto";
import "lottery/lottery/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/naruto0913/lottery/x/lottery/types";

// GenesisState defines the lottery module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
