syntax = "proto3";
package naruto0913.lottery.lottery;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "lottery/lottery/params.proto";
import "lottery/lottery/lottery_info.proto";
import "lottery/lottery/stored_lottery.proto";
import "lottery/lottery/stored_bet.proto";
import "lottery/lottery/bet_info.proto";
import "lottery/lottery/lottery_data.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/naruto0913/lottery/x/lottery/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/naruto0913/lottery/lottery/params";
  }
  // Queries a LotteryInfo by index.
	rpc LotteryInfo(QueryGetLotteryInfoRequest) returns (QueryGetLotteryInfoResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/lottery_info";
	}
// Queries a StoredLottery by index.
	rpc StoredLottery(QueryGetStoredLotteryRequest) returns (QueryGetStoredLotteryResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/stored_lottery/{index}";
	}

	// Queries a list of StoredLottery items.
	rpc StoredLotteryAll(QueryAllStoredLotteryRequest) returns (QueryAllStoredLotteryResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/stored_lottery";
	}

// Queries a StoredBet by index.
	rpc StoredBet(QueryGetStoredBetRequest) returns (QueryGetStoredBetResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/stored_bet/{index}";
	}

	// Queries a list of StoredBet items.
	rpc StoredBetAll(QueryAllStoredBetRequest) returns (QueryAllStoredBetResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/stored_bet";
	}

// Queries a BetInfo by index.
	rpc BetInfo(QueryGetBetInfoRequest) returns (QueryGetBetInfoResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/bet_info";
	}
// Queries a LotteryData by index.
	rpc LotteryData(QueryGetLotteryDataRequest) returns (QueryGetLotteryDataResponse) {
		option (google.api.http).get = "/naruto0913/lottery/lottery/lottery_data";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetLotteryInfoRequest {}

message QueryGetLotteryInfoResponse {
	LotteryInfo LotteryInfo = 1 [(gogoproto.nullable) = false];
}
message QueryGetStoredLotteryRequest {
	  string index = 1;

}

message QueryGetStoredLotteryResponse {
	StoredLottery storedLottery = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredLotteryRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredLotteryResponse {
	repeated StoredLottery storedLottery = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetStoredBetRequest {
	  string index = 1;

}

message QueryGetStoredBetResponse {
	StoredBet storedBet = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoredBetRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoredBetResponse {
	repeated StoredBet storedBet = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetBetInfoRequest {}

message QueryGetBetInfoResponse {
	BetInfo BetInfo = 1 [(gogoproto.nullable) = false];
}
message QueryGetLotteryDataRequest {}

message QueryGetLotteryDataResponse {
	LotteryData LotteryData = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
